Обновил файл запуска